sre/common/kubernetes/ingressgateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ederbrito-com-br-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - ederbrito.com.br
        - "*.ederbrito.com.br"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - ederbrito.com.br
        - "*.ederbrito.com.br"
      tls:
        mode: SIMPLE
        credentialName: ssl-certificate-secret
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
