sre/common/kubernetes/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: istio-system
  labels:
    app: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
        sidecar.istio.io/inject: "false"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
    spec:
      containers:
        - name: jaeger
          image: "docker.io/jaegertracing/jaeger:2.14.0"
          args:
            - "--config"
            - "/jaeger-configuration/config.yaml"
          livenessProbe:
            httpGet:
              path: /status
              port: 13133
          readinessProbe:
            httpGet:
              path: /status
              port: 13133
          volumeMounts:
            - name: data
              mountPath: /badger
            - name: jaeger-configuration
              mountPath: "/jaeger-configuration"
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: data
          emptyDir: {}
        - name: jaeger-configuration
          configMap:
            name: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: tracing
  namespace: istio-system
  labels:
    app: jaeger
spec:
  type: ClusterIP
  ports:
    - name: http-query
      port: 80
      protocol: TCP
      targetPort: 16686
    # Note: Change port name if you add '--query.grpc.tls.enabled=true'
    - name: grpc-query
      port: 16685
      protocol: TCP
      targetPort: 16685
  selector:
    app: jaeger
---
# Jaeger implements the Zipkin API. To support swapping out the tracing backend, we use a Service named Zipkin.
apiVersion: v1
kind: Service
metadata:
  labels:
    name: zipkin
  name: zipkin
  namespace: istio-system
spec:
  ports:
    - port: 9411
      targetPort: 9411
      name: http-query
  selector:
    app: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: istio-system
  labels:
    app: jaeger
spec:
  type: ClusterIP
  ports:
  - name: jaeger-collector-http
    port: 14268
    targetPort: 14268
    protocol: TCP
  - name: jaeger-collector-grpc
    port: 14250
    targetPort: 14250
    protocol: TCP
  - port: 9411
    targetPort: 9411
    name: http-zipkin
  - port: 4317
    name: grpc-otel
  - port: 4318
    name: http-otel
  selector:
    app: jaeger
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
    - jaeger.ederbrito.com.br
  gateways:
    - ederbrito-com-br-gateway
  http:
    - match:
        - uri:
            prefix: "/"   # route all paths
      rewrite:
        uri: "/"   # rewrite to / when forwarding
      route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
